<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_RTCCameraGetImageState" Id="{f698fac1-8735-4fcc-b609-51b3ea140031}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_RTCCameraGetImageState :
(
	enum_member := 0
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>