<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_RTCCameraInitState" Id="{39019f03-aa5f-4b55-98d9-c9d412957118}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_RTCCameraInitState :
(
	RTC_INIT_CONNECTION 			:= 0,
	RTC_INIT_CLEAR_BUFFER			:= 10,	
	RTC_INIT_WAIT_FOR_USERNAME 		:= 20,	
	RTC_INIT_WRITE_USER				:= 30,	
	RTC_INIT_WAIT_FOR_PASSWORD 		:= 40,	
	RTC_INIT_WRITE_PASSWORD			:= 50,	
	RTC_INIT_WAIT_FOR_CONFIRMATION	:= 60,
	RTC_INIT_DONE					:= 80
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>