<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_RTCCameraState" Id="{8a0fc53e-59af-42e0-b947-ecbf60f52e31}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_RTCCameraState :
(
	RTC_UNINITIALIZED 				:= 0,	(* Not ready to work *)
	RTC_INITIALIZING				:= 10,	(* Preparing to work *)
	RTC_READY 						:= 20,	(* Ready to work *)
	RTC_IDLE						:= 30,	(* Waiting for commands *)
	RTC_RESET 						:= 40,	(* Reseting function block *)
	RTC_GET_RESULT_STATION_1		:= 50,	(* Start processing at station 1 and get the result *)	
	
	RTC_METHOD_DONE					:= 200,
	RTC_ABORTING					:= -10	(* Aborting *)
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>